tests/snapshots/args_test__non-existing-bind-address.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - non-existing
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: ArgumentError("Invalid bind-address provided non-existing")
